[tool.poetry]
name = "markhub"
version = "0.3.1"
description = "Markdown editor for your GitHub repositories"
authors = ["Roman Yatsenko  <yatsenkoroma@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-allauth = "^0.51"
PyGithub = "^1.55"
django-environ = "^0.9.0"
martor = "^1.6.11"
pymdown-extensions = "^9.4"
Pygments = "^2.12.0"
loguru = "^0.6.0"
gunicorn = "^20.1"
markdown-link-attr-modifier = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
